// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Radio renders radio correctly Medium with 2 in a group 1`] = `
<DocumentFragment>
  .c0.knit-radio {
  white-space: nowrap;
  outline: none;
  display: inline-block;
  position: relative;
}

.c0.knit-radio + span {
  cursor: not-allowed;
  margin-left: 10px;
}

.c0.knit-radio.knit-radio-checked .knit-radio-inner::after {
  opacity: 1;
}

.c0.knit-radio.knit-radio-disabled .knit-radio-inner {
  cursor: not-allowed;
  opacity: 0.6;
  background-color: #f2f2f2;
}

.c0.knit-radio.knit-radio-disabled + span {
  color: #808080;
}

.c0.knit-radio.knit-radio-disabled .knit-radio-input {
  cursor: not-allowed;
}

.c2 {
  position: relative;
  top: 0;
  left: 0;
  display: inline-block;
  width: 1.4rem;
  height: 1.4rem;
  border-width: 1px;
  cursor: pointer;
  border-style: solid;
  border-radius: 14px;
  border-color: #002966;
  background-color: #FFFFFF;
}

.c2::after {
  position: absolute;
  width: 0.8rem;
  height: 0.8rem;
  top: 50%;
  left: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  border-radius: 0.7rem;
  border-top: 0;
  border-left: 0;
  content: " ";
  background-color: #002966;
  opacity: 0;
}

.c2:focus {
  box-shadow: 0px 0px 2px hsl(216,100%,20%);
  outline: none;
}

.c1 {
  position: absolute;
  left: 0;
  z-index: 9999;
  cursor: pointer;
  opacity: 0;
  top: 0;
  bottom: 0;
  right: 0;
}

<label
    style="display: flex;"
  >
    <span
      class="knit-radio  knit-radio-checked knit-radio-disabled c0"
      disabled=""
    >
      <input
        checked=""
        class="knit-radio-input c1"
        disabled=""
        name="nodejs"
        type="radio"
        value="1"
      />
      <span
        class="knit-radio-inner c2"
        disabled=""
      />
    </span>
    <span>
      Option 1
    </span>
  </label>
  .c0.knit-radio {
  white-space: nowrap;
  outline: none;
  display: inline-block;
  position: relative;
}

.c0.knit-radio + span {
  cursor: not-allowed;
  margin-left: 10px;
}

.c0.knit-radio.knit-radio-checked .knit-radio-inner::after {
  opacity: 1;
}

.c0.knit-radio.knit-radio-disabled .knit-radio-inner {
  cursor: not-allowed;
  opacity: 0.6;
  background-color: #f2f2f2;
}

.c0.knit-radio.knit-radio-disabled + span {
  color: #808080;
}

.c0.knit-radio.knit-radio-disabled .knit-radio-input {
  cursor: not-allowed;
}

.c2 {
  position: relative;
  top: 0;
  left: 0;
  display: inline-block;
  width: 1.4rem;
  height: 1.4rem;
  border-width: 1px;
  cursor: pointer;
  border-style: solid;
  border-radius: 14px;
  border-color: #002966;
  background-color: #FFFFFF;
}

.c2::after {
  position: absolute;
  width: 0.8rem;
  height: 0.8rem;
  top: 50%;
  left: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  border-radius: 0.7rem;
  border-top: 0;
  border-left: 0;
  content: " ";
  background-color: #002966;
  opacity: 0;
}

.c2:focus {
  box-shadow: 0px 0px 2px hsl(216,100%,20%);
  outline: none;
}

.c1 {
  position: absolute;
  left: 0;
  z-index: 9999;
  cursor: pointer;
  opacity: 0;
  top: 0;
  bottom: 0;
  right: 0;
}

<label
    style="display: flex;"
  >
    <span
      class="knit-radio   knit-radio-disabled c0"
      disabled=""
    >
      <input
        class="knit-radio-input c1"
        disabled=""
        name="nodejs"
        type="radio"
        value="2"
      />
      <span
        class="knit-radio-inner c2"
        disabled=""
      />
    </span>
    <span>
      Option 2
    </span>
  </label>
</DocumentFragment>
`;

exports[`Radio renders radio correctly Small with 2 in group 1`] = `
<DocumentFragment>
  .c0.knit-radio {
  white-space: nowrap;
  outline: none;
  display: inline-block;
  position: relative;
}

.c0.knit-radio + span {
  cursor: pointer;
  margin-left: 10px;
}

.c0.knit-radio.knit-radio-checked .knit-radio-inner::after {
  opacity: 1;
}

.c0.knit-radio.knit-radio-disabled .knit-radio-inner {
  cursor: not-allowed;
  opacity: 0.6;
  background-color: #f2f2f2;
}

.c0.knit-radio.knit-radio-disabled + span {
  color: #808080;
}

.c0.knit-radio.knit-radio-disabled .knit-radio-input {
  cursor: not-allowed;
}

.c2 {
  position: relative;
  top: 0;
  left: 0;
  display: inline-block;
  width: 1.2rem;
  height: 1.2rem;
  border-width: 1px;
  cursor: pointer;
  border-style: solid;
  border-radius: 14px;
  border-color: #002966;
  background-color: #FFFFFF;
}

.c2::after {
  position: absolute;
  width: 0.6rem;
  height: 0.6rem;
  top: 50%;
  left: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  border-radius: 0.7rem;
  border-top: 0;
  border-left: 0;
  content: " ";
  background-color: #002966;
  opacity: 0;
}

.c2:focus {
  box-shadow: 0px 0px 2px hsl(216,100%,20%);
  outline: none;
}

.c1 {
  position: absolute;
  left: 0;
  z-index: 9999;
  cursor: pointer;
  opacity: 0;
  top: 0;
  bottom: 0;
  right: 0;
}

<label
    style="display: flex;"
  >
    <span
      class="knit-radio    c0"
    >
      <input
        class="knit-radio-input c1"
        name="nodejs"
        type="radio"
        value="1"
      />
      <span
        class="knit-radio-inner c2"
      />
    </span>
    <span>
      Option 1
    </span>
  </label>
  .c0.knit-radio {
  white-space: nowrap;
  outline: none;
  display: inline-block;
  position: relative;
}

.c0.knit-radio + span {
  cursor: pointer;
  margin-left: 10px;
}

.c0.knit-radio.knit-radio-checked .knit-radio-inner::after {
  opacity: 1;
}

.c0.knit-radio.knit-radio-disabled .knit-radio-inner {
  cursor: not-allowed;
  opacity: 0.6;
  background-color: #f2f2f2;
}

.c0.knit-radio.knit-radio-disabled + span {
  color: #808080;
}

.c0.knit-radio.knit-radio-disabled .knit-radio-input {
  cursor: not-allowed;
}

.c2 {
  position: relative;
  top: 0;
  left: 0;
  display: inline-block;
  width: 1.2rem;
  height: 1.2rem;
  border-width: 1px;
  cursor: pointer;
  border-style: solid;
  border-radius: 14px;
  border-color: #002966;
  background-color: #FFFFFF;
}

.c2::after {
  position: absolute;
  width: 0.6rem;
  height: 0.6rem;
  top: 50%;
  left: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  border-radius: 0.7rem;
  border-top: 0;
  border-left: 0;
  content: " ";
  background-color: #002966;
  opacity: 0;
}

.c2:focus {
  box-shadow: 0px 0px 2px hsl(216,100%,20%);
  outline: none;
}

.c1 {
  position: absolute;
  left: 0;
  z-index: 9999;
  cursor: pointer;
  opacity: 0;
  top: 0;
  bottom: 0;
  right: 0;
}

<label
    style="display: flex;"
  >
    <span
      class="knit-radio  knit-radio-checked  c0"
    >
      <input
        class="knit-radio-input c1"
        name="nodejs"
        type="radio"
        value="2"
      />
      <span
        class="knit-radio-inner c2"
      />
    </span>
    <span>
      Option 2
    </span>
  </label>
</DocumentFragment>
`;

exports[`Radio renders radio correctly Small with 2 in group with disabled 1`] = `
<DocumentFragment>
  .c0.knit-radio {
  white-space: nowrap;
  outline: none;
  display: inline-block;
  position: relative;
}

.c0.knit-radio + span {
  cursor: not-allowed;
  margin-left: 10px;
}

.c0.knit-radio.knit-radio-checked .knit-radio-inner::after {
  opacity: 1;
}

.c0.knit-radio.knit-radio-disabled .knit-radio-inner {
  cursor: not-allowed;
  opacity: 0.6;
  background-color: #f2f2f2;
}

.c0.knit-radio.knit-radio-disabled + span {
  color: #808080;
}

.c0.knit-radio.knit-radio-disabled .knit-radio-input {
  cursor: not-allowed;
}

.c2 {
  position: relative;
  top: 0;
  left: 0;
  display: inline-block;
  width: 1.2rem;
  height: 1.2rem;
  border-width: 1px;
  cursor: pointer;
  border-style: solid;
  border-radius: 14px;
  border-color: #002966;
  background-color: #FFFFFF;
}

.c2::after {
  position: absolute;
  width: 0.6rem;
  height: 0.6rem;
  top: 50%;
  left: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  border-radius: 0.7rem;
  border-top: 0;
  border-left: 0;
  content: " ";
  background-color: #002966;
  opacity: 0;
}

.c2:focus {
  box-shadow: 0px 0px 2px hsl(216,100%,20%);
  outline: none;
}

.c1 {
  position: absolute;
  left: 0;
  z-index: 9999;
  cursor: pointer;
  opacity: 0;
  top: 0;
  bottom: 0;
  right: 0;
}

<label
    style="display: flex;"
  >
    <span
      class="knit-radio  knit-radio-checked knit-radio-disabled c0"
      disabled=""
    >
      <input
        checked=""
        class="knit-radio-input c1"
        disabled=""
        name="nodejs"
        type="radio"
        value="1"
      />
      <span
        class="knit-radio-inner c2"
        disabled=""
      />
    </span>
    <span>
      Option 1
    </span>
  </label>
  .c0.knit-radio {
  white-space: nowrap;
  outline: none;
  display: inline-block;
  position: relative;
}

.c0.knit-radio + span {
  cursor: not-allowed;
  margin-left: 10px;
}

.c0.knit-radio.knit-radio-checked .knit-radio-inner::after {
  opacity: 1;
}

.c0.knit-radio.knit-radio-disabled .knit-radio-inner {
  cursor: not-allowed;
  opacity: 0.6;
  background-color: #f2f2f2;
}

.c0.knit-radio.knit-radio-disabled + span {
  color: #808080;
}

.c0.knit-radio.knit-radio-disabled .knit-radio-input {
  cursor: not-allowed;
}

.c2 {
  position: relative;
  top: 0;
  left: 0;
  display: inline-block;
  width: 1.2rem;
  height: 1.2rem;
  border-width: 1px;
  cursor: pointer;
  border-style: solid;
  border-radius: 14px;
  border-color: #002966;
  background-color: #FFFFFF;
}

.c2::after {
  position: absolute;
  width: 0.6rem;
  height: 0.6rem;
  top: 50%;
  left: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  border-radius: 0.7rem;
  border-top: 0;
  border-left: 0;
  content: " ";
  background-color: #002966;
  opacity: 0;
}

.c2:focus {
  box-shadow: 0px 0px 2px hsl(216,100%,20%);
  outline: none;
}

.c1 {
  position: absolute;
  left: 0;
  z-index: 9999;
  cursor: pointer;
  opacity: 0;
  top: 0;
  bottom: 0;
  right: 0;
}

<label
    style="display: flex;"
  >
    <span
      class="knit-radio   knit-radio-disabled c0"
      disabled=""
    >
      <input
        class="knit-radio-input c1"
        disabled=""
        name="nodejs"
        type="radio"
        value="2"
      />
      <span
        class="knit-radio-inner c2"
        disabled=""
      />
    </span>
    <span>
      Option 2
    </span>
  </label>
</DocumentFragment>
`;

exports[`Radio renders radio correctly renders with no child correctly 1`] = `<DocumentFragment />`;

exports[`Radio renders radio correctly renders with single child correctly 1`] = `
<DocumentFragment>
  .c0.knit-radio {
  white-space: nowrap;
  outline: none;
  display: inline-block;
  position: relative;
}

.c0.knit-radio + span {
  cursor: pointer;
  margin-left: 10px;
}

.c0.knit-radio.knit-radio-checked .knit-radio-inner::after {
  opacity: 1;
}

.c0.knit-radio.knit-radio-disabled .knit-radio-inner {
  cursor: not-allowed;
  opacity: 0.6;
  background-color: #f2f2f2;
}

.c0.knit-radio.knit-radio-disabled + span {
  color: #808080;
}

.c0.knit-radio.knit-radio-disabled .knit-radio-input {
  cursor: not-allowed;
}

.c2 {
  position: relative;
  top: 0;
  left: 0;
  display: inline-block;
  width: 1.4rem;
  height: 1.4rem;
  border-width: 1px;
  cursor: pointer;
  border-style: solid;
  border-radius: 14px;
  border-color: #002966;
  background-color: #FFFFFF;
}

.c2::after {
  position: absolute;
  width: 0.8rem;
  height: 0.8rem;
  top: 50%;
  left: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  border-radius: 0.7rem;
  border-top: 0;
  border-left: 0;
  content: " ";
  background-color: #002966;
  opacity: 0;
}

.c2:focus {
  box-shadow: 0px 0px 2px hsl(216,100%,20%);
  outline: none;
}

.c1 {
  position: absolute;
  left: 0;
  z-index: 9999;
  cursor: pointer;
  opacity: 0;
  top: 0;
  bottom: 0;
  right: 0;
}

<label
    style="display: flex;"
  >
    <span
      class="knit-radio    c0"
    >
      <input
        class="knit-radio-input c1"
        name="nodejs"
        type="radio"
        value="1"
      />
      <span
        class="knit-radio-inner c2"
      />
    </span>
  </label>
</DocumentFragment>
`;
